tests/data/bad/inheritance_changes_bad.py
from __future__ import annotations

from rizhiy_cfg import CN
from tests.data.good.inheritance import cfg

cfg = CN(cfg)
cfg.DICT.BAR = 2
